--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @media screen and (min-width: 1050px) {
-  body > nav {
+  nav#main-nav {
     padding-left: calc((100vw - 1050px) / 2);
     padding-right: calc((100vw - 1050px) / 2);
   }
@@ -16,7 +16,12 @@
     padding-right: calc((100vw - 1050px) / 2) !important;
   }
 
-  #contact_bar {
+  section#contact_bar {
+    padding-left: calc((100vw - 1050px) / 2) !important;
+    padding-right: calc((100vw - 1050px) / 2) !important;
+  }
+
+  section#references-slider {
     padding-left: calc((100vw - 1050px) / 2) !important;
     padding-right: calc((100vw - 1050px) / 2) !important;
   }
