--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,8 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
+@import url('./embla.css');
+@import url('./hamburger-spin.min.css');
+
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+html {
+  font-family: 'Manrope', sans-serif;
+}
+
+body {
+  font-family: 'Rubik', sans-serif;
+  scrollbar-track-color: transparent;
+}
+
+h1 {
+  font-family: 'Manrope', sans-serif;
+  font-weight: 800;
+}
 
 @media screen and (min-width: 1050px) {
   nav#main-nav {
@@ -12,6 +28,16 @@
   }
 
   footer {
+    padding-left: calc((100vw - 1050px) / 2) !important;
+    padding-right: calc((100vw - 1050px) / 2) !important;
+  }
+
+  section#hero-banner {
+    padding-left: calc((100vw - 1050px) / 2) !important;
+    padding-right: calc((100vw - 1050px) / 2) !important;
+  }
+
+  section#about {
     padding-left: calc((100vw - 1050px) / 2) !important;
     padding-right: calc((100vw - 1050px) / 2) !important;
   }
@@ -27,11 +53,7 @@
   }
 }
 
-body {
-  font-family: 'Rubik', sans-serif;
+#hero-banner--subtitle {
+  width: calc(100vw - 2.5rem);
 }
 
-h1 {
-  font-family: 'Manrope', sans-serif;
-  font-weight: 800;
-}
