--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,4 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @import url('./embla.css');
 @import url('./hamburger-spin.min.css');
@@ -24,3 +22,111 @@ h1 {
 #hero-banner--subtitle {
   width: calc(100vw - 2.5rem);
 }
+
+/*!
+ * Hamburgers
+ * @description Tasty CSS-animated hamburgers
+ * @author Jonathan Suh @jonsuh
+ * @site https://jonsuh.com/hamburgers
+ * @link https://github.com/jonsuh/hamburgers
+ */
+.hamburger {
+  @apply p-0;
+  @apply cursor-pointer;
+  transition-property: opacity, filter;
+  transition-duration: .15s;
+  transition-timing-function: linear;
+  font: inherit;
+  color: inherit;
+  text-transform: none;
+  @apply bg-transparent;
+  @apply border-none;
+  @apply m-0;
+  @apply overflow-visible;
+}
+
+.hamburger-box {
+  @apply w-8;
+  @apply h-6;
+  @apply inline-block;
+  @apply relative;
+}
+
+.hamburger-inner {
+  @apply block;
+  @apply top-1/2;
+  @apply mt-0.5;
+}
+
+.hamburger-inner,
+.hamburger-inner::after,
+.hamburger-inner::before {
+  @apply w-8;
+  @apply h-1;
+  @apply rounded;
+  @apply absolute;
+  transition-property: transform;
+  transition-duration: .15s;
+  transition-timing-function: ease;
+}
+
+.hamburger-inner::after,
+.hamburger-inner::before {
+  @apply content-[""];
+  @apply block;
+}
+
+.hamburger-inner::before {
+  top: -10px
+}
+
+.hamburger-inner::after {
+  bottom: -10px
+}
+
+.hamburger--spin .hamburger-inner {
+  transition-duration: .22s;
+  transition-timing-function: cubic-bezier(.55, .055, .675, .19)
+}
+
+.hamburger--spin .hamburger-inner::before {
+  transition: top .1s .25s ease-in, opacity .1s ease-in
+}
+
+.hamburger--spin .hamburger-inner::after {
+  transition: bottom .1s .25s ease-in, transform .22s cubic-bezier(.55, .055, .675, .19)
+}
+
+.hamburger--spin.is-active .hamburger-inner {
+  transform: rotate(225deg);
+  transition-delay: .12s;
+  transition-timing-function: cubic-bezier(.215, .61, .355, 1)
+}
+
+.hamburger--spin.is-active .hamburger-inner::before {
+  @apply top-0;
+  @apply opacity-0;
+  transition: top .1s ease-out, opacity .1s .12s ease-out
+}
+
+.hamburger--spin.is-active .hamburger-inner::after {
+  @apply bottom-0;
+  @apply rotate-90;
+  transition: bottom .1s ease-out, transform .22s .12s cubic-bezier(.215, .61, .355, 1)
+}
+
+.embla__button {
+  @apply appearance-none;
+  @apply bg-transparent;
+  @apply touch-manipulation;
+  @apply inline-flex;
+  text-decoration: none;
+  @apply cursor-pointer;
+  @apply border-0;
+  @apply p-0;
+  @apply m-0;
+}
+
+@tailwind components;
+
+@tailwind utilities;
