--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,132 +1,211 @@
 @tailwind base;
 
-@import url('./embla.css');
-@import url('./hamburger-spin.min.css');
+@layer base {
 
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+  @import url("./embla.css");
+  @import url("./hamburger-spin.min.css");
 
-html {
-  font-family: 'Manrope', sans-serif;
+  /* @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"); */
+  :root {
+    --background: hsl(0, 0%, 100%);
+    --foreground: rgba(30, 30, 30)
+  }
+
+  .dark {
+
+  }
+
+  html {
+    @apply bg-white;
+    font-family: "Manrope", sans-serif;
+    scrollbar-width: auto;
+  }
+
+  html[class*="dark"] {
+    @apply bg-neutral-950;
+    font-family: "Manrope", sans-serif;
+    scrollbar-width: auto;
+  }
+
+  body {
+    font-family: "Rubik", sans-serif;
+    scrollbar-track-color: transparent;
+  }
+
+  h1 {
+    font-family: "Manrope", sans-serif;
+    font-weight: 800;
+  }
+
+  button {
+    /* Disables tap highlight color on Chrome */
+    -webkit-tap-highlight-color: transparent;
+  }
 }
 
-body {
-  font-family: 'Rubik', sans-serif;
-  scrollbar-track-color: transparent;
-}
+@layer components {
+  #hero-banner--subtitle {
+    width: calc(100vw - 2.5rem);
+  }
 
-h1 {
-  font-family: 'Manrope', sans-serif;
-  font-weight: 800;
-}
-
-#hero-banner--subtitle {
-  width: calc(100vw - 2.5rem);
-}
-
-/*!
+  /*!
  * Hamburgers
  * @description Tasty CSS-animated hamburgers
  * @author Jonathan Suh @jonsuh
  * @site https://jonsuh.com/hamburgers
  * @link https://github.com/jonsuh/hamburgers
  */
-.hamburger {
-  @apply p-0;
-  @apply cursor-pointer;
-  transition-property: opacity, filter;
-  transition-duration: .15s;
-  transition-timing-function: linear;
-  font: inherit;
-  color: inherit;
-  text-transform: none;
-  @apply bg-transparent;
-  @apply border-none;
-  @apply m-0;
-  @apply overflow-visible;
-}
+  .hamburger {
+    @apply m-0 cursor-pointer overflow-visible border-none bg-transparent p-0;
+    transition-property: opacity, filter;
+    transition-duration: 0.15s;
+    transition-timing-function: linear;
+    font: inherit;
+    color: inherit;
+    text-transform: none;
+  }
 
-.hamburger-box {
-  @apply w-8;
-  @apply h-6;
-  @apply inline-block;
-  @apply relative;
-}
+  .hamburger-box {
+    @apply relative inline-block h-6 w-8;
+  }
 
-.hamburger-inner {
-  @apply block;
-  @apply top-1/2;
-  @apply mt-0.5;
-}
+  .hamburger-inner {
+    @apply top-1/2 mt-0.5 block;
+  }
 
-.hamburger-inner,
-.hamburger-inner::after,
-.hamburger-inner::before {
-  @apply w-8;
-  @apply h-1;
-  @apply rounded;
-  @apply absolute;
-  transition-property: transform;
-  transition-duration: .15s;
-  transition-timing-function: ease;
-}
+  .hamburger-inner,
+  .hamburger-inner::after,
+  .hamburger-inner::before {
+    @apply absolute h-1 w-8 rounded;
+    transition-property: transform;
+    transition-duration: 0.15s;
+    transition-timing-function: ease;
+  }
 
-.hamburger-inner::after,
-.hamburger-inner::before {
-  @apply content-[""];
-  @apply block;
-}
+  .hamburger-inner::after,
+  .hamburger-inner::before {
+    @apply block content-[""];
+  }
 
-.hamburger-inner::before {
-  top: -10px
-}
+  .hamburger-inner::before {
+    top: -10px;
+  }
 
-.hamburger-inner::after {
-  bottom: -10px
-}
+  .hamburger-inner::after {
+    bottom: -10px;
+  }
 
-.hamburger--spin .hamburger-inner {
-  transition-duration: .22s;
-  transition-timing-function: cubic-bezier(.55, .055, .675, .19)
-}
+  .hamburger--spin .hamburger-inner {
+    transition-duration: 0.22s;
+    transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
 
-.hamburger--spin .hamburger-inner::before {
-  transition: top .1s .25s ease-in, opacity .1s ease-in
-}
+  .hamburger--spin .hamburger-inner::before {
+    transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
+  }
 
-.hamburger--spin .hamburger-inner::after {
-  transition: bottom .1s .25s ease-in, transform .22s cubic-bezier(.55, .055, .675, .19)
-}
+  .hamburger--spin .hamburger-inner::after {
+    transition: bottom 0.1s 0.25s ease-in,
+      transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
 
-.hamburger--spin.is-active .hamburger-inner {
-  transform: rotate(225deg);
-  transition-delay: .12s;
-  transition-timing-function: cubic-bezier(.215, .61, .355, 1)
-}
+  .hamburger--spin.is-active .hamburger-inner {
+    transform: rotate(225deg);
+    transition-delay: 0.12s;
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  .hamburger--spin.is-active .hamburger-inner::before {
+    @apply top-0 opacity-0;
+    transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
+  }
 
-.hamburger--spin.is-active .hamburger-inner::before {
-  @apply top-0;
-  @apply opacity-0;
-  transition: top .1s ease-out, opacity .1s .12s ease-out
-}
+  .hamburger--spin.is-active .hamburger-inner::after {
+    @apply bottom-0 rotate-90;
+    transition: bottom 0.1s ease-out,
+      transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
 
-.hamburger--spin.is-active .hamburger-inner::after {
-  @apply bottom-0;
-  @apply rotate-90;
-  transition: bottom .1s ease-out, transform .22s .12s cubic-bezier(.215, .61, .355, 1)
-}
+  .embla__button {
+    @apply m-0 inline-flex cursor-pointer touch-manipulation appearance-none border-0 bg-transparent p-0;
+    text-decoration: none;
+  }
 
-.embla__button {
-  @apply appearance-none;
-  @apply bg-transparent;
-  @apply touch-manipulation;
-  @apply inline-flex;
-  text-decoration: none;
-  @apply cursor-pointer;
-  @apply border-0;
-  @apply p-0;
-  @apply m-0;
+  .bg-primary {
+    @apply bg-white dark:bg-neutral-850;
+  }
+
+  .bg-secondary {
+    @apply bg-neutral-50 dark:bg-neutral-800;
+  }
+
+  .bg-tertiary {
+    @apply bg-neutral-200 dark:bg-neutral-700;
+  }
+
+  .bg-accent {
+    @apply bg-red-550 dark:bg-red-450;
+  }
+
+  .color-primary {
+    @apply text-red-550 dark:text-red-450;
+  }
+
+  .color-secondary {
+    @apply;
+  }
+
+  .color-grey {
+    @apply text-neutral-400;
+  }
+
+  .color-text {
+    @apply text-neutral-950 dark:text-neutral-50;
+  }
+
+  .color-label {
+    @apply text-neutral-700 dark:text-neutral-200;
+  }
+
+  .navBarMaxHeight {
+    @apply max-h-[60px] md:max-h-[70px] 1050:max-h-[80px];
+  }
+
+  .mainTopNav {
+    @apply top-[60px] md:top-[70px] 1050:top-[80px];
+  }
+
+  .mainTopNavHeader {
+    @apply top-[60px] md:top-[70px] 1050:top-[80px];
+  }
+
+  .navPadding {
+    @apply px-2 1050:px-1050;
+  }
+
+  .navigationMenuRoot {
+    @apply absolute left-0 top-[60px] h-screen w-screen px-8 pt-5 transition-transform duration-1000 md:top-[70px] 1050:static 1050:h-fit 1050:w-fit 1050:px-0 1050:pt-0;
+  }
+
+  .navigationMenuList {
+    @apply flex h-full w-full flex-col items-start 1050:flex-row 1050:justify-center;
+  }
+
+  .navigationMenuLink {
+    @apply colorText block select-none text-3xl outline-none 1050:text-xl;
+  }
+
+  .navigationMenuTrigger {
+    @apply colorText flex select-none flex-row items-center gap-1 text-xl outline-none;
+  }
+
+  .CaretDown {
+    @apply hidden 1050:block;
+  }
+
+  .mainPadding {
+    @apply px-5 1050:px-1050;
+  }
 }
 
 @tailwind components;
-
 @tailwind utilities;
