--- a/app/globals.css
+++ b/app/globals.css
@@ -5,73 +5,54 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-
-    --invert-background: 0 0% 12%;
-    --invert-foreground: 0 0% 98%;
-
-    --footer-background: 0 0% 15%;
-    --footer-foreground: 0 0% 98%;
-
-    --card: 0 0% 98%;
+    --foreground: 220.0 5.3% 11.2%;
+    --invert-background: 0.0 0.0% 11.8%;
+    --invert-foreground: 210.0 25.0% 98.4%;
+    --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
-
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-
-    --primary: 355 87% 60%;
-    --primary-foreground: 0 0% 98%;
-
+    --primary: 353 100% 59%;
+    --primary-foreground: 0 85.7% 97.3%;
     --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 25%;
-
+    --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
-
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
-
-    --destructive: 0 84.2% 60.2%;
+    --destructive: 354.9 86.9% 52.0%;
     --destructive-foreground: 0 0% 98%;
-
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-
+    --ring: 354.9 86.9% 48.0%;
+    --footer: 0 0% 14.9%;
+    --footer-foreground: 0 0% 98%;
+    --footer-nav-separator: 355 85% 61%;
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 0 0% 12%;
-    --foreground: 0 0% 98%;
-
+    --background: 0.0 0.0% 11.8%;
+    --foreground: 210.0 25.0% 98.4%;
     --invert-background: 0 0% 100%;
-    --invert-foreground: 0 0% 3.9%;
-
-    --card: 0 0% 15%;
+    --invert-foreground: 220.0 5.3% 11.2%;
+    --card: 0.0 0.0% 11.8%;
     --card-foreground: 0 0% 98%;
-
-    --popover: 0 0% 12%;
+    --popover: 0.0 0.0% 11.8%;
     --popover-foreground: 0 0% 98%;
-
     --primary: 355 85% 65%;
-    --primary-foreground: 0 0% 3.9%;
-
+    --primary-foreground: 0 85.7% 97.3%;
     --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 90%;
-
+    --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
-
     --accent: 0 0% 14.9%;
     --accent-foreground: 0 0% 98%;
-
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 0.0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
+    --border: 0.0 0.0% 27.8%;
+    --input: 0.0 0.0% 27.8%;
+    --ring: 0 72.2% 50.6%;
   }
 }
 
@@ -79,6 +60,7 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
