Visual bug corrected update NextJS and shadcnui Create Contact Element Create Hero Banner

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,12 +22,13 @@
     --accent-foreground: 0 0% 9%;
     --destructive: 354.9 86.9% 52.0%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
+    --border: 0 0% 90%;
     --input: 0 0% 89.8%;
     --ring: 354.9 86.9% 48.0%;
     --footer: 0 0% 14.9%;
     --footer-foreground: 0 0% 98%;
-    --footer-nav-separator: 355 85% 61%;
+    --footer-nav-separator: 355 85% 65%;
+    --footer-separator: 0.0 0.0% 90%;
     --radius: 0.5rem;
   }
 
@@ -52,7 +53,7 @@
     --destructive-foreground: 0 0% 98%;
     --border: 0.0 0.0% 27.8%;
     --input: 0.0 0.0% 27.8%;
-    --ring: 0 72.2% 50.6%;
+    --ring: 355 85% 65%;
   }
 }
 
