--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,8 @@
     --footer-nav-separator: 355 85% 65%;
     --footer-separator: 0.0 0.0% 90%;
     --radius: 0.5rem;
-  }
+    --hero-banner-aside: 354.915 87% 60%;
+    }
 
   .dark {
     --background: 0.0 0.0% 11.8%;
@@ -54,6 +55,7 @@
     --border: 0.0 0.0% 27.8%;
     --input: 0.0 0.0% 27.8%;
     --ring: 355 85% 65%;
+    --hero-banner-aside: 354.915 87% 60%;
   }
 }
 
