Add uuid for key Fix unique key error for footer Keep id for  navigation in header because of navigation Change h1 and h2 font size across screen size Adding aside for hero banner Create Description section for main page Create References components with sliders using Providers for 1 query Adding References Category table Modify References table by adding relation to references Category Adding TRPCRouter for rprisma references query

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@
     --input: 0 0% 89.8%;
     --ring: 354.9 86.9% 48.0%;
     --footer: 0 0% 14.9%;
-    --footer-foreground: 0 0% 98%;
+    --const-white: 0 0% 98%;
     --footer-nav-separator: 355 85% 65%;
     --footer-separator: 0.0 0.0% 90%;
     --radius: 0.5rem;
