--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -95,6 +95,10 @@
     @apply shadow-md;
   }
 
+  .rdp-vhidden {
+    @apply hidden;
+  }
+
   /*!
  * Hamburgers
  * @description Tasty CSS-animated hamburgers
@@ -193,5 +197,15 @@
     transition:
       bottom 0.1s ease-out,
       transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+
+  input[type=date]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    display: none;
+  }
+
+  input[type=date]::-webkit-calendar-picker-indicator {
+    -webkit-appearance: none;
+    display: none;
   }
 }
